<package>
  <name>hsrb_common_config</name>
  <version>1.0.0</version>
  <description>HSRの実機・Gazebo共通設定ファイル</description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Kazuhito Tanaka</author>
  <author>Kazuto Murase</author>
  <author>Keisuke Takeshita</author>
  <author>Satoru Onoda</author>
  <author>Syuuhei Shiro</author>
  <author>Takayuki Nakamura</author>
  <author>Tamaki Nishino</author>
  <author>Yoshimi Iyoda</author>
  <author>Yosuke Matsusaka</author>
  <author>Yusuke Ota</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
